=== Version 1.2.3 (in git)

* deprecations

  * BaseFormatter#add_example_group (use #example_group_started instead)
  * ExampleGroupProxy#backtrace (use #location instead)
  * BaseFormatter#example_pending now expects two arguments. The third
    argument is deprecated.
  * ExampleGroupProxy#filtered_description. This was only used in one place
    internally, and was a confusing solution to the problem. If you've got a
    custom formatter that uses it, you can just use
    ExampleGroupProxy#description and modify it directly.

* enhancements

  * support for specifying single examples with colon syntax. Closes #712.
    (Ben Mabey)
    * you can now say "spec some_spec.rb:12" in addition to "spec some_spec.rb
      --line 12"

* bug fixes

  * support expectations on DelegateClass (Clifford T. Matthews). Closes #48.

=== Version 1.2.2 / 2009-03-22

Bug-fix release (fixes regression introduced in 1.2.1)

* bug fixes 

  * fixed bug in which spec_parser raised an error for custom example group     
    base classes

=== Version 1.2.1 / 2009-03-22

This is a bug-fix release, recommended for anybody who has already upgraded to
rspec-1.2.0.

See Upgrade.rdoc for information about upgrading to rspec-1.2.1

* enhancements

  * matchers, including the new DSL, easily added to your test/unit tests
  * added support for 0 to n args in matcher DSL
  * restored loading rubygems when necessary
    * if you really don't want to use rubygems, you
      can set an NO_RUBYGEMS environment
      variable, and RSpec won't force it on you.
  * added -u/--debugger option (Rick DeNatale) #262.
    * just add "debugger" anywhere in your code and run spec path/to/code --debugger
  * rename ExampleDescription to ExampleProxy
  * pass ExampleProxy to example_started(). Closes #738, #743
    * thanks to Tobias Grimm (Eclipse) fort the patch and Roman Chernyatchik
      (JetBrains, RubyMine) for the assist
  
* bug fixes
